quarkus-training-part2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  annotations:
    app.quarkus.io/quarkus-version: 3.12.0
    app.quarkus.io/commit-id: e7824475768421a9cdb770b8cd66c49375e8445c
    app.quarkus.io/vcs-uri: https://github.com/fernandobalieiro/quarkus-training-part2.git
    app.quarkus.io/build-timestamp: 2024-09-20 - 16:22:18 +0000
  labels:
    app.kubernetes.io/name: quarkus-training-part2
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: quarkus-training-part2
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-training-part2
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/quarkus-version: 3.12.0
        app.quarkus.io/commit-id: e7824475768421a9cdb770b8cd66c49375e8445c
        app.quarkus.io/vcs-uri: https://github.com/fernandobalieiro/quarkus-training-part2.git
        app.quarkus.io/build-timestamp: 2024-09-20 - 16:22:18 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: quarkus-training-part2
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quarkus-training-part2:0.0.1
          imagePullPolicy: Never
          name: quarkus-training-part2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds:  30
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
